# sound-compass

./: .gitignore  README.md
calc/: Bitrates.xlsx  TestPCBCalcs.xlsx
doc/: System Block Diagram.drawio
sch/: A3.kicad_wks
sch/mic-test-board/: AD7768-4BSTZ.kicad_sym  AD7768BSTZ.kicad_sym  ADCCommonParts.kicad_sch  ADC_AD7768.kicad_sch  AnalogFrontEnd.kicad_sch  Anti-alias.kicad_sch  IC-52000 Mic.kicad_sch  ICS-40730 Mic.kicad_sch  ICS-40730.kicad_sym  MAX6070BAUT12_.kicad_sym  MicPreamp.kicad_sch  Power.kicad_sch  fp-info-cache  fp-lib-table  mic-test-pcb.kicad_dru  mic-test-pcb.kicad_pcb  mic-test-pcb.kicad_prl  mic-test-pcb.kicad_pro  mic-test-pcb.kicad_sch  mic-test-pcb.kicad_sym  place_footprints.ini  sym-lib-table  uController.kicad_sch
sch/mic-test-board/manufacturing/: mic_test_board_RevA.csv
sch/mic-test-board/mic-test-board.pretty/: IC_SN74AUC08RGYRG4.kicad_mod  MIC_ICS-40730.kicad_mod  MIC_ICS-52000.kicad_mod  Molex_PicoBlade_53047-0510_1x05_P1.25mm_Vertical.kicad_mod  Oscillator_SMD_Kyocera_KC3225Z32-4Pin_3.2x2.5mm.kicad_mod  QFP50P1200X1200X160-64N.kicad_mod  ST_Morpho_Connector_144_STLink_SMD_Headers_BottomMount.kicad_mod
sch/mic-test-board/packages3D/: AD7768-4BSTZ.step  ICS-40730.step  TSM-136-01-L-DV-A-P.stp
sch/mic-test-board_micboard/: MicAndPreamp.kicad_sch  fp-info-cache  fp-lib-table  mic-test-board_micboard.kicad_pcb  mic-test-board_micboard.kicad_prl  mic-test-board_micboard.kicad_pro  mic-test-board_micboard.kicad_sch  sym-lib-table
sch/mic-test-board_micboard/manufacturing/: BOM_mic-test-board_micboard_RevA.csv
sim/: ADC data output logic.asc  micpreamp.asc
src/firmware/sound-compass-dev-kit/: .cproject  .mxproject  .project  STM32H743ZITX_FLASH.ld  sound-compass-dev-kit Debug.launch  sound-compass-dev-kit.ioc
src/firmware/sound-compass-mic-interface/: .cproject  .mxproject  .project  STM32H743ZITX_FLASH.ld  sound-compass-mic-interface.cfg  sound-compass-mic-interface.ioc  sound-compass-mic-interface.launch
src/prototype/: beamformer fft.py  beamformer_fir.py  beamformer_iir.py  constants.py  firFractionalDelay.py  iir_test.py  micSignalGenerator.ipynb  micSignalGenerator.py
src/research/IIRFilters/: generate_coeffs.py  generate_coeffs1.py
src/services/cppProcessor/audioProcessor/src/audioProcessor/: CMakeLists.txt  app.cpp  audioProcessor.cpp  beamProcessor.cpp  main.cpp
src/services/rust-test/tcp-client/: Cargo.toml
src/services/rust-test/tcp-client/cli/: Cargo.toml
src/services/rust-test/tcp-client/core/: Cargo.toml
src/services/rust-test/tcp-client/core/src/: array_interface.rs  lib.rs  message_parser.rs  mpmc_queue.rs  tcp_client.rs
src/services/rust-test/tcp-client/core/src/stages/: audio_frame_sink.rs  messages.rs  mod.rs
src/services/rust-test/tcp-client/core/src/stages/audio_frame_producer/: array_interface.rs  message_parser.rs  mod.rs
src/services/rust-test/tcp-client/core/src/traits/: consumer.rs  impmc_queue_bounded.rs  mod.rs  producer.rs
src/services/rust-test/tcp-client/src/: main.rs
src/services/rust-test/tcp-client/src/resources/: default_config.toml
src/services/rust-test/tcp-client/utils/: Cargo.toml
src/services/rust-test/tcp-client/utils/src/: app_config.rs  logger.rs
(+131 files in other folders)
